...
                    Align(
                      alignment: Alignment.centerRight,
                      child: Padding(
                        padding: const EdgeInsets.only(right: 12, top: 4),
                        child: TextButton(
                          onPressed: _terminer,
                          child: const Text('Passer',
                              style:
                                  TextStyle(color: CouleursSW.texteSecondaire)),
                        ),
                      ),
                    ),
                    Expanded(
...
