...
                                        color: Colors.white,
                                      ),
                                    )
                                  : Text(
                                      _inscription
                                          ? 'Créer mon compte'
                                          : 'Se connecter',
                                    ),
                            ),
                            ...[
                            const SizedBox(height: 16),
                            Row(
                              children: [
...
